update timer section in JavaScript file

--- a/style.css
+++ b/style.css
@@ -46,3 +46,14 @@ button {
   background-color: blueviolet;
   color: antiquewhite;
 }
+.choice-container {
+  display: flex;
+  flex-direction: column;
+}
+.option-box {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  margin: 20px;
+  background-color: darkslateblue;
+}
