--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ article p {
   text-align: center;
   padding: 20px;
 }
-button {
+.startbutton {
   width: 200px;
   height: 50px;
   border-radius: 10px;
@@ -56,4 +56,38 @@ button {
   border-radius: 10px;
   margin: 20px;
   background-color: darkslateblue;
+}
+/*refers to styling of view high scores page */
+.scoreboard {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin-left: 250px;
+}
+.high-scores-title {
+  font-size: 40px;
+  padding: 10px;
+}
+.scorelist {
+  width: 80%;
+  height: 50px;
+  background-color: lavender;
+  padding: 10px;
+  margin: 10px;
+  font-size: 25px;
+}
+.score-button-container {
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+}
+.scorebutton {
+  width: auto;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 25px;
+  padding: 10px;
+  background-color: darkslateblue;
+  color: antiquewhite;
 }
