--- a/style.css
+++ b/style.css
@@ -47,21 +47,6 @@ article p {
   color: antiquewhite;
 }
 
-.options-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: auto;
-}
-.option-box {
-  width: 200px;
-  height: 50px;
-  border-radius: 10px;
-  margin: 20px;
-  background-color: darkslateblue;
-}
 /*refers to styling of view high scores page */
 #high-scores-page {
   display: none;
@@ -111,4 +96,21 @@ article p {
 }
 .question {
   width: 70%;
+}
+
+.options-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+.options {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  margin: 20px;
+  background-color: darkslateblue;
+  color: antiquewhite;
 }
